@@ -1,5 +1,11 @@
 2012-12-10 Riccardo Mottola <rm@gnu.org>
 
+	* DiffWrapper.h
+	* DiffWrapper.m
+        do not use local left&right arrays
+
+2012-12-10 Riccardo Mottola <rm@gnu.org>
+
 	* DiffTextView.m
         Use proper accessors and not private ivars.
 
